// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReceiptRow /> renders Failure receipt 1`] = `
<div
  className="receipt-row row no-gutters"
  id="R1111111111111111111111111111111111111111111"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-3925159684"
        >
          Receipt
          :
        </b>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receipt ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        R1111111111111111111111111111111111111111111
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Executed in Block
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onClick={[Function]}
        >
          <a
            className="block-link"
            href="/blocks/B111111111111111111111111111111111111111111"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            B111111...
          </a>
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer.test"
      >
        signer.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver.test"
      >
        receiver.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        3 Tgas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          0.00034
           
          Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
                  fill="#ccc"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Called method: 'set_listing_seller_transaction_id' in contract: 
                    <span
                      onClick={[Function]}
                    >
                      <a
                        className="jsx-3150401870 account-link"
                        href="/accounts/receiver.test"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        receiver.test
                      </a>
                    </span>
                    <dl>
                      <dt>
                        Arguments:
                      </dt>
                      <dd>
                        <div>
                          <div
                            style={
                              Object {
                                "display": "block",
                                "height": "0px",
                                "overflow": "hidden",
                              }
                            }
                          >
                            <textarea
                              className="jsx-2493677144 code-preview"
                              readOnly={true}
                              value="{
  \\"listing_id\\": \\"000028066\\",
  \\"seller_transaction_id\\": \\"tr_1IWD3SBwavzc3Cjzlb5ZMkPk\\"
}"
                            />
                          </div>
                          <div
                            onClick={[Function]}
                          >
                            <div
                              style={
                                Object {
                                  "float": "left",
                                }
                              }
                            >
                              Show more
                            </div>
                          </div>
                        </div>
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        <i>
          Failure
          :
           
        </i>
        <pre>
          {
  "ActionError": {
    "index": 0,
    "kind": {
      "FunctionCallError": {
        "HostError": {
          "GuestPanic": {
            "panic_msg": "listings not found"
          }
        }
      }
    }
  }
}
        </pre>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <pre
          className="jsx-3925159684"
        >
          000028066 listings not found
        </pre>
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
          id="R2222222222222222222222222222222222222222222"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-3925159684"
                >
                  Receipt
                  :
                </b>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receipt ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                R2222222222222222222222222222222222222222222
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Executed in Block
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    className="block-link"
                    href="/blocks/B222222222222222222222222222222222222222222"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    B222222...
                  </a>
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="system"
              >
                system
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver.test"
              >
                receiver.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                0 gas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  0
                   
                  Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m0 18 9-9-9-9zm18-9L9 0v18z"
                          fill="#8dd4bd"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Transferred 
                            <span
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              0.00353
                               
                              Ⓝ
                            </span>
                             to 
                            <span
                              onClick={[Function]}
                            >
                              <a
                                className="jsx-3150401870 account-link"
                                href="/accounts/receiver.test"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                              >
                                receiver.test
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                Empty result
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                No logs
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders receipt with many outcome receipts 1`] = `
<div
  className="receipt-row row no-gutters"
  id="R1111111111111111111111111111111111111111111"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-3925159684"
        >
          Receipt
          :
        </b>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receipt ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        R1111111111111111111111111111111111111111111
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Executed in Block
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onClick={[Function]}
        >
          <a
            className="block-link"
            href="/blocks/B222222222222222222222222222222222222222222"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            B222222...
          </a>
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer.test"
      >
        signer.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver.test"
      >
        receiver.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        20 Tgas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          0.00209
           
          Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
                  fill="#ccc"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Called method: 'ft_transfer_call' in contract: 
                    <span
                      onClick={[Function]}
                    >
                      <a
                        className="jsx-3150401870 account-link"
                        href="/accounts/receiver.test"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        receiver.test
                      </a>
                    </span>
                    <dl>
                      <dt>
                        Arguments:
                      </dt>
                      <dd>
                        <div>
                          <div
                            style={
                              Object {
                                "display": "block",
                                "height": "0px",
                                "overflow": "hidden",
                              }
                            }
                          >
                            <textarea
                              className="jsx-2493677144 code-preview"
                              readOnly={true}
                              value="{
  \\"receiver_id\\": \\"farm.berryclub.ek.near\\",
  \\"amount\\": \\"9807229473212706028\\",
  \\"memo\\": \\"Swapping 9807229473212706028 🍌 to get 9807229473212706028 🥒\\",
  \\"msg\\": \\"\\\\\\"DepositAndStake\\\\\\"\\"
}"
                            />
                          </div>
                          <div
                            onClick={[Function]}
                          >
                            <div
                              style={
                                Object {
                                  "float": "left",
                                }
                              }
                            >
                              Show more
                            </div>
                          </div>
                        </div>
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        <i>
          SuccessReceiptId
          :
           
        </i>
        <pre>
          R3333333333333333333333333333333333333333333
        </pre>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <pre
          className="jsx-3925159684"
        >
          Transfer 9807229473212706028 from signer.test to receiver.test
Memo: Swapping 9807229473212706028 🍌 to get 9807229473212706028 🥒
        </pre>
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
          id="R222222222222222222222222222222222222222222"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-3925159684"
                >
                  Receipt
                  :
                </b>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receipt ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                R222222222222222222222222222222222222222222
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Executed in Block
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    className="block-link"
                    href="/blocks/B333333333333333333333333333333333333333333"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    B333333...
                  </a>
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="signer1.test"
              >
                signer1.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver.test"
              >
                receiver.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                4 Tgas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  0.00041
                   
                  Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
                          fill="#ccc"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Called method: 'ft_on_transfer' in contract: 
                            <span
                              onClick={[Function]}
                            >
                              <a
                                className="jsx-3150401870 account-link"
                                href="/accounts/receiver.test"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                              >
                                receiver.test
                              </a>
                            </span>
                            <dl>
                              <dt>
                                Arguments:
                              </dt>
                              <dd>
                                <div>
                                  <div
                                    style={
                                      Object {
                                        "display": "block",
                                        "height": "0px",
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <textarea
                                      className="jsx-2493677144 code-preview"
                                      readOnly={true}
                                      value="{
  \\"sender_id\\": \\"leonardwcai.near\\",
  \\"amount\\": \\"9807229473212706028\\",
  \\"msg\\": \\"\\\\\\"DepositAndStake\\\\\\"\\"
}"
                                    />
                                  </div>
                                  <div
                                    onClick={[Function]}
                                  >
                                    <div
                                      style={
                                        Object {
                                          "float": "left",
                                        }
                                      }
                                    >
                                      Show more
                                    </div>
                                  </div>
                                </div>
                              </dd>
                            </dl>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                <i>
                  Result
                  :
                   
                </i>
                <div>
                  <div
                    style={
                      Object {
                        "display": "block",
                        "height": "0px",
                        "overflow": "hidden",
                      }
                    }
                  >
                    <textarea
                      className="jsx-2493677144 code-preview"
                      readOnly={true}
                      value="\\"0\\""
                    />
                  </div>
                  <div
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "float": "left",
                        }
                      }
                    >
                      Show more
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                No logs
              </div>
            </div>
            <div
              className="executed-receipt-row row no-gutters"
            >
              <div
                className="col"
              >
                <div
                  className="receipt-row row no-gutters"
                  id="R555555555555555555555555555555555555555555"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row no-gutters"
                    >
                      <div
                        className="receipt-row-title receipt-hash-title col"
                      >
                        <b
                          className="jsx-3925159684"
                        >
                          Receipt
                          :
                        </b>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receipt ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        R555555555555555555555555555555555555555555
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Executed in Block
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <a
                            className="block-link"
                            href="/blocks/B444444444444444444444444444444444444444444"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                          >
                            B444444...
                          </a>
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Predecessor ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="system"
                      >
                        system
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receiver ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="receiver.test"
                      >
                        receiver.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Gas Burned
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        0 gas
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Tokens Burned
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          0
                           
                          Ⓝ
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        <div
                          className="action-sparse-row mx-0  row no-gutters"
                        >
                          <div
                            className="col-auto"
                          >
                            <div
                              className="jsx-1246332424 action-row-img"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m0 18 9-9-9-9zm18-9L9 0v18z"
                                  fill="#8dd4bd"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="action-row-details col"
                          >
                            <div
                              className="action-row-message row no-gutters"
                            >
                              <div
                                className="col-md-8 col-7"
                              >
                                <div
                                  className="row no-gutters"
                                >
                                  <div
                                    className="action-row-title col"
                                  >
                                    Transferred 
                                    <span
                                      onBlur={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      0.00269
                                       
                                      Ⓝ
                                    </span>
                                     to 
                                    <span
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="jsx-3150401870 account-link"
                                        href="/accounts/receiver.test"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                      >
                                        receiver.test
                                      </a>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-status col"
                      >
                        Empty result
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        No logs
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
          id="R3333333333333333333333333333333333333333333"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-3925159684"
                >
                  Receipt
                  :
                </b>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receipt ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                R3333333333333333333333333333333333333333333
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Executed in Block
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    className="block-link"
                    href="/blocks/B4444444444444444444444444444444444444444444"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    B444444...
                  </a>
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="signer1.test"
              >
                signer1.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver1.test"
              >
                receiver1.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                3 Tgas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  0.00035
                   
                  Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
                          fill="#ccc"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Called method: 'ft_resolve_transfer' in contract: 
                            <span
                              onClick={[Function]}
                            >
                              <a
                                className="jsx-3150401870 account-link"
                                href="/accounts/receiver1.test"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                              >
                                receiver1.test
                              </a>
                            </span>
                            <dl>
                              <dt>
                                Arguments:
                              </dt>
                              <dd>
                                <div>
                                  <div
                                    style={
                                      Object {
                                        "display": "block",
                                        "height": "0px",
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <textarea
                                      className="jsx-2493677144 code-preview"
                                      readOnly={true}
                                      value="{
  \\"sender_id\\": \\"leonardwcai.near\\",
  \\"receiver_id\\": \\"farm.berryclub.ek.near\\",
  \\"amount\\": \\"9807229473212706028\\"
}"
                                    />
                                  </div>
                                  <div
                                    onClick={[Function]}
                                  >
                                    <div
                                      style={
                                        Object {
                                          "float": "left",
                                        }
                                      }
                                    >
                                      Show more
                                    </div>
                                  </div>
                                </div>
                              </dd>
                            </dl>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                <i>
                  Result
                  :
                   
                </i>
                <div>
                  <div
                    style={
                      Object {
                        "display": "block",
                        "height": "0px",
                        "overflow": "hidden",
                      }
                    }
                  >
                    <textarea
                      className="jsx-2493677144 code-preview"
                      readOnly={true}
                      value="\\"9807229473212706028\\""
                    />
                  </div>
                  <div
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "float": "left",
                        }
                      }
                    >
                      Show more
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                No logs
              </div>
            </div>
            <div
              className="executed-receipt-row row no-gutters"
            >
              <div
                className="col"
              >
                <div
                  className="receipt-row row no-gutters"
                  id="R6666666666666666666666666666666666666666666"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row no-gutters"
                    >
                      <div
                        className="receipt-row-title receipt-hash-title col"
                      >
                        <b
                          className="jsx-3925159684"
                        >
                          Receipt
                          :
                        </b>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receipt ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        R6666666666666666666666666666666666666666666
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Executed in Block
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onClick={[Function]}
                        >
                          <a
                            className="block-link"
                            href="/blocks/B666666666666666666666666666666666666666666"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                          >
                            B666666...
                          </a>
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Predecessor ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="system"
                      >
                        system
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receiver ID
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="receiver.test"
                      >
                        receiver.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Gas Burned
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        0 gas
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Tokens Burned
                        :
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          0
                           
                          Ⓝ
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        <div
                          className="action-sparse-row mx-0  row no-gutters"
                        >
                          <div
                            className="col-auto"
                          >
                            <div
                              className="jsx-1246332424 action-row-img"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m0 18 9-9-9-9zm18-9L9 0v18z"
                                  fill="#8dd4bd"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="action-row-details col"
                          >
                            <div
                              className="action-row-message row no-gutters"
                            >
                              <div
                                className="col-md-8 col-7"
                              >
                                <div
                                  className="row no-gutters"
                                >
                                  <div
                                    className="action-row-title col"
                                  >
                                    Transferred 
                                    <span
                                      onBlur={[Function]}
                                      onFocus={[Function]}
                                      onMouseOut={[Function]}
                                      onMouseOver={[Function]}
                                    >
                                      0.00068
                                       
                                      Ⓝ
                                    </span>
                                     to 
                                    <span
                                      onClick={[Function]}
                                    >
                                      <a
                                        className="jsx-3150401870 account-link"
                                        href="/accounts/receiver.test"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                      >
                                        receiver.test
                                      </a>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-status col"
                      >
                        Empty result
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        No logs
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
          id="R4444444444444444444444444444444444444444444"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-3925159684"
                >
                  Receipt
                  :
                </b>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receipt ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                R4444444444444444444444444444444444444444444
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Executed in Block
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    className="block-link"
                    href="/blocks/B555555555555555555555555555555555555555555"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    B555555...
                  </a>
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="system"
              >
                system
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver.test"
              >
                receiver.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                0 gas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  0
                   
                  Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m0 18 9-9-9-9zm18-9L9 0v18z"
                          fill="#8dd4bd"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Transferred 
                            <span
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              0.00104
                               
                              Ⓝ
                            </span>
                             to 
                            <span
                              onClick={[Function]}
                            >
                              <a
                                className="jsx-3150401870 account-link"
                                href="/accounts/receiver.test"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                              >
                                receiver.test
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                Empty result
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                No logs
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders successful receipt 1`] = `
<div
  className="receipt-row row no-gutters"
  id="R1111111111111111111111111111111111111111111"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-3925159684"
        >
          Receipt
          :
        </b>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receipt ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        R1111111111111111111111111111111111111111111
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Executed in Block
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onClick={[Function]}
        >
          <a
            className="block-link"
            href="/blocks/B222222222222222222222222222222222222222222"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            B222222...
          </a>
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer.test"
      >
        signer.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver.test"
      >
        receiver.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        6 Tgas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned
        :
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          0.00061
           
          Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m0 9 6 6L9 0zm12-6L9 18l9-9z"
                  fill="#ccc"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Called method: 'vote' in contract: 
                    <span
                      onClick={[Function]}
                    >
                      <a
                        className="jsx-3150401870 account-link"
                        href="/accounts/receiver.test"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                      >
                        receiver.test
                      </a>
                    </span>
                    <dl>
                      <dt>
                        Arguments:
                      </dt>
                      <dd>
                        <div>
                          <div
                            style={
                              Object {
                                "display": "block",
                                "height": "0px",
                                "overflow": "hidden",
                              }
                            }
                          >
                            <textarea
                              className="jsx-2493677144 code-preview"
                              readOnly={true}
                              value="{
  \\"request\\": {
    \\"left\\": 32626789,
    \\"right\\": 32132129
  },
  \\"response\\": \\"Skipped\\"
}"
                            />
                          </div>
                          <div
                            onClick={[Function]}
                          >
                            <div
                              style={
                                Object {
                                  "float": "left",
                                }
                              }
                            >
                              Show more
                            </div>
                          </div>
                        </div>
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        <i>
          Result
          :
           
        </i>
        <div>
          <div
            style={
              Object {
                "display": "block",
                "height": "0px",
                "overflow": "hidden",
              }
            }
          >
            <textarea
              className="jsx-2493677144 code-preview"
              readOnly={true}
              value="{
  \\"left\\": 29647268,
  \\"right\\": 22016008
}"
            />
          </div>
          <div
            onClick={[Function]}
          >
            <div
              style={
                Object {
                  "float": "left",
                }
              }
            >
              Show more
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        No logs
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
          id="R2222222222222222222222222222222222222222222"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-3925159684"
                >
                  Receipt
                  :
                </b>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receipt ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                R2222222222222222222222222222222222222222222
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Executed in Block
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onClick={[Function]}
                >
                  <a
                    className="block-link"
                    href="/blocks/B333333333333333333333333333333333333333333"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    B333333...
                  </a>
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="system"
              >
                system
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver.test"
              >
                receiver.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                0 gas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned
                :
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  0
                   
                  Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m0 18 9-9-9-9zm18-9L9 0v18z"
                          fill="#8dd4bd"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Transferred 
                            <span
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseOut={[Function]}
                              onMouseOver={[Function]}
                            >
                              0.01844
                               
                              Ⓝ
                            </span>
                             to 
                            <span
                              onClick={[Function]}
                            >
                              <a
                                className="jsx-3150401870 account-link"
                                href="/accounts/receiver.test"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                              >
                                receiver.test
                              </a>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                Empty result
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                No logs
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
